(executable
 (name main)
 (libraries grvcore grvweb bonsai.web)
 (modules Main)
 (modes js)
 (js_of_ocaml
  (flags
   (:include js-of-ocaml-flags-%{profile})))
 (preprocess
  (pps js_of_ocaml-ppx ppx_let)))

(rule
 (write-file
  js-of-ocaml-flags-dev
  "(:standard --no-inline --debug-info --source-map)"))

(rule
 (write-file js-of-ocaml-flags-release "(:standard)"))
