(include_subdirs unqualified)

(library
 (name grvcore)
 (public_name GRV.core)
 (modules
  (:standard \ lang_gen))
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord ppx_sexp_conv
    ppx_let))
 (wrapped false))

(rule
 (target Lang.ml)
 (deps Lang_gen.ml)
 (action
  (with-stdout-to
   %{target}
   (run %{ocaml} %{deps}))))
