(include_subdirs unqualified)

(library
 (name grvcore)
 (public_name GRV.core)
 (modules
  (:standard \ Lang_gen))
 (libraries sexplib)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord ppx_sexp_conv
    ppx_let ppx_inline_test))
 (wrapped false)
 (inline_tests))

(rule
 (target Lang.ml)
 (deps lang/Lang_gen.ml)
 (action
  (with-stdout-to
   %{target}
   (run %{ocaml} %{deps}))))
