(include_subdirs unqualified)

(library
 (name grvweb)
 (public_name GRV.web)
 (libraries grvcore incr_dom)
 (modules
  (:standard \ main))
 (preprocess
  (pps js_of_ocaml-ppx ppx_let ppx_sexp_conv))
 (wrapped false))

(executable
 (name main)
 (libraries grvcore grvweb incr_dom)
 (modules main)
 (modes js)
 (js_of_ocaml
  (flags
   (:include js-of-ocaml-flags-%{profile})))
 (preprocess
  (pps js_of_ocaml-ppx ppx_let ppx_sexp_conv)))

(rule
 (write-file js-of-ocaml-flags-dev "(:standard --debuginfo --noinline)"))

(rule
 (write-file js-of-ocaml-flags-release "(:standard)"))
